--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="top-bar">
-            <h1>Pawsible Privacy Policy</h1>
+            <h1>Privacy Policy</h1>
         </header>
 
         <div class="scroll-view">
