--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="privacy-section">
                 <h2>Contact Us</h2>
                 <p>If you have any questions or concerns about our privacy practices, please contact us at:</p>
-                <p>Email: support@pawsible.tech</p>
+                <p>Email: support@pawsible.io</p>
             </section>
         </div>
     </div>
